# python-basic-hw

./: .gitignore  README.md
homework_01/: main.py
homework_02/: README.md  base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  README.md  main.py  pyproject.toml
